@startuml ManageLessonClassDiagram

!theme plain
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

left to right direction

' ════════════════════════════════════════════════════════════════════════════════════
' CONTROLLER LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class LessonController {
}

' ════════════════════════════════════════════════════════════════════════════════════
' GUARD LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class AuthGuard {
}

class RoleGuard {
}

' ════════════════════════════════════════════════════════════════════════════════════
' DTO LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class CreateLessonRequestDto {
}

class UpdateLessonDto {
}

' ════════════════════════════════════════════════════════════════════════════════════
' SERVICE LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class LessonService {
}

class DataSource {
}

' ════════════════════════════════════════════════════════════════════════════════════
' ENTITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class Lesson {
}

class Subject {
}

class User {
}

class Video {
}

class Quiz {
}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

LessonController --> AuthGuard
LessonController --> RoleGuard
LessonController --> LessonService
LessonController ..> CreateLessonRequestDto
LessonController ..> UpdateLessonDto

LessonService --> DataSource
LessonService --> Lesson
LessonService --> Subject

Lesson --> Subject
Lesson --> Video
Lesson --> Quiz

Subject --> User

@enduml
